--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Я — майбутня верстальниця</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="site-header">
+      <h1>Привіт! Я Ольга</h1>
+      <p>Навчаюсь верстці сайтів і створюю красу через код 💻✨</p>
+    </header>
+
+    <section class="about">
+      <h2>Про мене</h2>
+      <p>
+        Я проходжу навчання з веб-розробки, вивчаю HTML і CSS, експериментую з
+        практичними проєктами та веду свій шлях до професії. Люблю гармонію,
+        структуру і логіку в дизайні.
+      </p>
+    </section>
+
+    <section class="skills">
+      <h2>Що я вже вмію</h2>
+      <ul>
+        <li>HTML5 (структура, семантика)</li>
+        <li>CSS (адаптивна верстка, Flexbox)</li>
+        <li>Git та GitHub (робота з репозиторіями)</li>
+      </ul>
+    </section>
+
+    <section class="contact">
+      <h2>Зв’язок</h2>
+      <p>
+        Пишіть мені на <a href="mailto:your@email.com">your@email.com</a> або у
+        <a href="#">Telegram</a>
+      </p>
+    </section>
+
+    <footer class="site-footer">
+      <p>© 2025 Ольга. Всі права — у руках коду 💫</p>
+    </footer>
+  </body>
 </html>
