--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <li>CSS (адаптивна верстка, Flexbox)</li>
         <li>Git та GitHub (робота з репозиторіями)</li>
       </ul>
+      <h3>🎓 Я навчаюся на курсі Frontend Developer у школі GoIT.</h3>
+      <p>
+        Тут я крок за кроком опановую HTML, CSS, JavaScript, Git та створення
+        реальних сайтів.
+      </p>
+      <a href="https://ref.goit.global/94eb4568">Дивись програму</a>
     </section>
 
     <section class="contact">
