--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
       <a href="https://ref.goit.global/94eb4568">Дивись програму</a>
     </section>
 
+    <section class="project">
+      <h2>Проєкти</h2>
+      <ul>
+        <li>
+          <a href="https://olgaded.github.io/resume-project/"
+            >Марафон "Моє резюме"</a
+          >
+        </li>
+        <li>
+          <a href="https://olgaded.github.io/portfolio-start/">Сайт-візитка</a>
+        </li>
+      </ul>
+    </section>
+
     <section class="contact">
       <h2>Зв’язок</h2>
       <p>
